# dspy-slim

./: .gitignore  .pre-commit-config.yaml  .upstream-sync-sha  README.md  pyproject.toml  pytest.ini
.github/workflows/: build_and_release.yml  docs-push.yml  minimal_fork_tests.yml
docs/: AUDIT_METHODOLOGY.md  AUDIT_SUMMARY.md  COMPATIBILITY_AUDIT_INDEX.md  COMPATIBILITY_AUDIT_REPORT.md  COMPATIBILITY_REMEDIATION_PLAN.md  FORK.md  SECURITY.md  SELF_IMPROVEMENT_EVAL_ISSUES.md  UPSTREAM_COMPATIBILITY_MATRIX.md  UPSTREAM_COMPATIBILITY_PLAN.md  UPSTREAM_FORWARD_COMPATIBILITY.md  UPSTREAM_ISSUE_DRAFTS.md  UPSTREAM_PR_SUBMISSION_GUIDE.md
dspy/: __init__.py  __metadata__.py
dspy/adapters/: __init__.py  base.py  chat_adapter.py  json_adapter.py  utils.py
dspy/adapters/types/: __init__.py  base_type.py  tool.py
dspy/clients/: __init__.py  base_lm.py  cache.py  lm.py
dspy/dsp/utils/: __init__.py  settings.py
dspy/evaluate/: __init__.py  evaluate.py  metrics.py
dspy/predict/: __init__.py  chain_of_thought.py  predict.py  react.py  rlm.py
dspy/primitives/: base_module.py  example.py  module.py  prediction.py  python_interpreter.py  repl_types.py  runner.js
dspy/signatures/: __init__.py  field.py  signature.py
dspy/streaming/: messages.py  streamify.py  streaming_listener.py
dspy/teleprompt/: __init__.py  bootstrap_trace.py
dspy/teleprompt/gepa/: gepa.py  gepa_utils.py
dspy/utils/: __init__.py  asyncify.py  callback.py  lm_metadata.py  magicattr.py  parallelizer.py  saving.py  usage_tracker.py
spec/: abstractions.md  validate_fixtures.py
spec/fixtures/: chat_adapter_parse.json  example_ops.json  infer_prefix.json  json_adapter_parse.json  message_assembly.json  module_tree_walk.json  predict_pipeline.json  prediction_ops.json  react_state_machine.json  settings_behavior.json  signature_ops.json  signature_parse.json
tests/: README.md  conftest.py
tests/minimal/: test_bootstrap_trace.py  test_callback_dispatch.py  test_e2e_rlm_synthetic_sandbox.py  test_evaluate.py  test_gepa.py  test_gepa_rlm_squad_script.py  test_imports.py  test_integration_openrouter.py  test_lm.py  test_lm_metadata.py  test_parallel.py  test_predict.py  test_react.py  test_rlm.py  test_streaming.py  test_support_utilities.py
tests/minimal/helpers/: __init__.py  dummies.py  replay_lm.py  workspace_scripts.py
